--- a/reactExamples/event-sample/src/App.css
+++ b/reactExamples/event-sample/src/App.css
@@ -1,13 +1,31 @@
 .App {
   text-align: center;
+}
+.counter{
+  text-align: center;
   width: 10%;
-  margin: auto;
+  margin: 3rem auto;
   padding: 20px;
   border: 1px solid black;
 }
+
+.carousel{
+  text-align: center;
+  margin: 2rem auto;
+  
+}
+
 .buttonGroup{
+  margin: 0 auto;
   display: flex;
   justify-content:space-around;
+  max-width: 10rem;
+}
+
+img{
+  height: 20rem;
+  width: 20rem;
+  object-fit: cover;
 }
 
 .App-logo {
